<resources>
    <string name="app_name">Uminc</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="params">Paramètres</string>
    <string name="calendrier">Calendrier</string>
    <string name="note">Notes</string>
    <string name="accueil">Accueil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="monday">Lundi</string>
    <string name="tuesday">Mardi</string>
    <string name="friday">Vendredi</string>
    <string name="thursday">Jeudi</string>
    <string name="wednesday">Mercredi</string>
    <string name="eight">8h</string>
    <string name="nine">9h</string>
    <string name="ten">10h</string>
    <string name="eleven">11h</string>
    <string name="twelve">12h</string>
    <string name="thirteen">13h</string>
    <string name="fourteen">14h</string>
    <string name="fifteen">15h</string>
    <string name="sixteen">16h</string>
    <string name="seventeen">17h</string>
    <string name="eighteen">18h</string>
    <string name="nineteen">19h</string>
    <string name="twenty">20h</string>
    <string name="title_activity_login">Connexion</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Connexion</string>
    <string name="action_sign_in_short">Se connecter</string>
    <string name="error_invalid_email">L\'email est invalide</string>
    <string name="error_invalid_password">Le mot est nécessaire</string>
    <string name="error_incorrect_password">Le mot de passe est incorrect</string>
    <string name="error_field_required">Ce champ est requis</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="numero_etu">numéro étudiant</string>
    <string name="dbufr_grade_separator">/</string>
    <string name="dbufr_charset" translatable="false">ISO-8859-15</string>
    <string name="Valider">valider</string>
    <string name="etudiant_saver">etudiant_xcvhe</string>
    <string name="changeEtudiantString">Changer de compte</string>
    <string name="ChangeUe">Changer les UEs</string>
    <string name="parametres">Paramétres</string>

    <!-- string for caldavzap -->
    <string name="caldavzap_login">student.master</string>
    <string name="caldavzap_password">guest</string>
    <string name="caldavzap_base_adress">https://cal.ufr-info-p6.jussieu.fr</string>
    <string name="caldavzap_config_adress">https://cal.ufr-info-p6.jussieu.fr/master/config.js</string>
    <string name="syncr_item">Synchroniser</string>
    <string name="SwitchParameter">Activer les notifications</string>
    <string name="notif_file">notifactver</string>
    <string name="accueil_list_ue">Les UEs choisies :</string>
    <string name="settings_notif">Notifications</string>
    <string name="settings_account">Compte</string>
    <string name="settings_ue">UEs</string>
    <string name="checkbox_ue_settings_item">Visible</string>
</resources>
