<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.unuldur.uminc.CalendarFragment">


    <Spinner
        android:id="@+id/spinnerCalendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:useDefaultMargins="true"
        android:layout_margin="5dp"
        android:columnCount="6"
        android:rowCount="54">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_columnWeight="1"
            android:textAlignment="center"
            android:text="@string/monday" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="0"
            android:layout_columnWeight="1"
            android:textAlignment="center"
            android:text="@string/tuesday" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="0"
            android:layout_columnWeight="1"
            android:textAlignment="center"
            android:text="@string/wednesday" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="4"
            android:layout_row="0"
            android:layout_columnWeight="1"
            android:textAlignment="center"
            android:text="@string/thursday" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="5"
            android:layout_row="0"
            android:layout_columnWeight="1"
            android:textAlignment="center"
            android:text="@string/friday" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_rowSpan="4"
            android:text="@string/eight"
            android:layout_rowWeight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="5"
            android:layout_rowSpan="4"
            android:text="@string/nine"
            android:layout_rowWeight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="9"
            android:layout_rowSpan="4"
            android:text="@string/ten"
            android:layout_rowWeight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="13"
            android:layout_rowSpan="4"
            android:text="@string/eleven"
            android:layout_rowWeight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="17"
            android:layout_rowSpan="4"
            android:text="@string/twelve"
            android:layout_rowWeight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="21"
            android:layout_rowSpan="4"
            android:text="@string/thirteen"
            android:layout_rowWeight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="25"
            android:layout_rowSpan="4"
            android:text="@string/fourteen"
            android:layout_rowWeight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="29"
            android:layout_rowSpan="4"
            android:text="@string/fifteen"
            android:layout_rowWeight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="33"
            android:layout_rowSpan="4"
            android:text="@string/sixteen"
            android:layout_rowWeight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="37"
            android:layout_rowSpan="4"
            android:text="@string/seventeen"
            android:layout_rowWeight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="41"
            android:layout_rowSpan="4"
            android:text="@string/eighteen"
            android:layout_rowWeight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="45"
            android:layout_rowSpan="4"
            android:text="@string/nineteen"
            android:layout_rowWeight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="49"
            android:layout_rowSpan="4"
            android:text="@string/twenty"
            android:layout_rowWeight="1"/>
    </GridLayout>
</LinearLayout>
