<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_accueil"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/accueil" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_music_note_black"
            android:title="@string/note" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/calendrier" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/params" />
    </group>

</menu>
