<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="2dp"
            android:text="@string/settings_notif"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            app:srcCompat="@drawable/border" />

        <Switch
            android:id="@+id/switchActivateNotif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:checked="true"
            android:text="@string/SwitchParameter" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="2dp"
            android:text="@string/settings_account"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            app:srcCompat="@drawable/border" />

        <Button
            android:id="@+id/buttonChangeEtudiant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:text="@string/changeEtudiantString" />

        <Button
            android:id="@+id/buttonChangeUEs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:text="@string/ChangeUe" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="2dp"
            android:text="@string/settings_ue"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            app:srcCompat="@drawable/border" />

        <ExpandableListView
            android:id="@+id/elv_settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:scrollbars="none|vertical" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>